--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Project specifics
+/fs_bridge/in/
+/fs_bridge/out/
+/*.log
+/.venv/
